force-app/main/default/objects/NotaFiscalItemSegregacao__c/NotaFiscalItemSegregacao__c.object-meta.xml
<CustomObject>
    <label>Nota Fiscal Item Segregação</label>
    <nameField>
        <displayFormat>NFIS {0000000000}</displayFormat>
        <label>N° NF Item Segregação</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notas Fiscais Itens Segregação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>