force-app/main/default/objects/NotaFiscalItemSegregacao__c/fields/CodigoNotaFiscalItemSegregacao__c.field-meta.xml
<CustomField>
    <fullName>CodigoNotaFiscalItemSegregacao__c</fullName>
    <externalId>true</externalId>
    <label>Código Nota Fiscal Item Segregação</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>