force-app/main/default/objects/NotaFiscalItemSegregacao__c/fields/NotaFiscalItemId__c.field-meta.xml
<CustomField>
    <fullName>NotaFiscalItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nota Fiscal Item</label>
    <referenceTo>NotaFiscalItem__c</referenceTo>
    <relationshipLabel>Notas Fiscais Itens Segregação</relationshipLabel>
    <relationshipName>NotasFiscaisItensSegregacao</relationshipName>
    <type>Lookup</type>
</CustomField>