force-app/main/default/objects/NotaFiscalItemSegregacao__c/fields/ProdutoId__c.field-meta.xml
<CustomField>
    <fullName>ProdutoId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Notas Fiscais Itens Segregação</relationshipLabel>
    <relationshipName>NotasFiscaisItensSegregacao</relationshipName>
    <type>Lookup</type>
</CustomField>