force-app/main/default/objects/NotaFiscalItemSegregacao__c/fields/QuantidadeGrade__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeGrade__c</fullName>
    <label>Quantidade Grade</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>